--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ff"
         tools:targetApi="31">
+
         <activity
-            android:name=".mainInfoActivity"
-            android:exported="true" />
-        <activity
-            android:name=".SplashScreen"
-            android:exported="true"></activity>
-        <activity
-            android:name=".NextScreen"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen1"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".NextScreen"
+            android:exported="true" />
     </application>
 
 </manifest>
